--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 {% block content %}
 
     {% if current_user.is_authenticated %}
-        <h1>Olá, {{current_user.nome}}.Você está logado(a).</h1>
+        <h1>Olá {{current_user.nome_usuario}}.Você está logado(a).</h1>
 
     {% else %}
         <h1>Você não está logado.</h1>
