--- a/templates/login.html
+++ b/templates/login.html
@@ -7,10 +7,14 @@
     <div>
 
         <form action="" method="post">
-            Nome: <input type="text" name="nomeForm" id=""> <br>
-            Senha: <input type="password" name="senhaForm" id=""> <br>
+            Email: <input type="email" name="emailForm" value="{{ form_data.emailForm if form_data else ''}}" placeholder="exemplo@email.com" required> <br>
+            Senha: <input type="password" name="senhaForm" required> <br>
             <input type="submit" value="Logar">
-        </form>
+        </form> <br>
+
+        <p>Não está cadastrado? <br>
+            <a href="{{ url_for('cadastro') }}">Clique aqui</a>
+        </p>
 
     </div>
  
