--- a/templates/base.html
+++ b/templates/base.html
@@ -14,9 +14,10 @@
         <a href="{{ url_for('home' ) }}">Página inicial</a>
         {% if current_user.is_authenticated %}
             <a href="{{ url_for('perfil' ) }}">Perfil</a>
+            <a href="{{ url_for('logout' ) }}">Sair</a>
 
         {% else %}
-            <a href="{{ url_for('login' ) }}">Login</a>
+            <a href="{{ url_for('login' ) }}">Entrar</a>
 
         {% endif %}
 
