--- a/templates/publicar.html
+++ b/templates/publicar.html
@@ -1,16 +1,19 @@
 {% extends "base.html" %}
 
-{% block title %}Perfil{% endblock %}
+{% block title %}Publicar Atividade{% endblock %}
 
 {% block content %}
 
     <div>
         <h1>Publicar Atividade Adaptada</h1>
         <form action="" method="post" enctype="multipart/form-data">
-
+            Adicionar Arquivo: <input type="file" name="arquivoForm" id="" required>
+            Titulo: <input type="text" name="tiuloForm" id="" required>
+            Descrição: <input type="text" name="descricaoForm" id="" required>
+            <input type="submit" value="Publicar">
 
         </form>
-        
+
     </div>
 
 {% endblock %}
