Adicionando a interface e arquivos de imagem à rota publicar

--- a/templates/administrador/classe_tag.html
+++ b/templates/administrador/classe_tag.html
@@ -6,7 +6,7 @@
     <div>
         <h1>Adicionar Classe de Tag</h1>
         <form action="" method="post">
-            <input type="text" name="nome_classeForm" value="{{form_data if nome_classeForm else ' '}}">
+            <input type="text" name="nome_classeForm" value="{{form_data if nome_classeForm else ' '}}" required>
             <input type="submit" value="Adicionar Classe">
 
         </form>
