--- a/templates/administrador/cursos.html
+++ b/templates/administrador/cursos.html
@@ -6,7 +6,7 @@
     <div>
         <h1>Asicione um Curso</h1>
         <form action="" method="post">
-            <input type="text" name="nomeForm" value="{{form_data if nomeForm else ' '}}">
+            <input type="text" name="nomeForm" value="{{form_data if nomeForm else ' '}}" required>
             <input type="submit" value="Adicionar">
 
         </form>
