--- a/templates/base.html
+++ b/templates/base.html
@@ -7,21 +7,37 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/inicio.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/forms.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/perfil.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/editar_perfil.css') }}">
+</head>
 </head>
 <body>
-    <nav class="navbar">
-        <a href="{{url_for('home')}}">Página inicial(logo)</a>
-        <a href="{{ url_for('home' ) }}">Página inicial</a>
-        {% if current_user.is_authenticated %}
-            <a href="{{ url_for('perfil' ) }}">Perfil</a>
-            <a href="{{ url_for('logout' ) }}">Sair</a>
+    <header>
+        <nav class="navbar-body">
+            <a href="{{url_for('home')}}" class="navbar-brand logo-header">
+                <img src="static/images/logo01.png" alt="Logo">
+            
+            </a>
 
-        {% else %}
-            <a href="{{ url_for('login' ) }}">Entrar</a>
+            <div class="nav-links">
+                <a href="{{ url_for('home' ) }}">Página inicial</a>
+                <a href="{{ url_for('publicar')}}">Publicar</a>
+                {% if current_user.is_authenticated %}
+                    <a href="{{ url_for('perfil' ) }}">Perfil</a>
+                    <a href="{{ url_for('logout' ) }}">Sair</a>
 
-        {% endif %}
+                {% else %}
+                    <a href="{{ url_for('login' ) }}">Entrar</a>
 
-    </nav>
+                {% endif %}
+
+            </div>
+
+        </nav>
+
+    </header>
 
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
