--- a/templates/administrador/tags.html
+++ b/templates/administrador/tags.html
@@ -3,33 +3,38 @@
 {% block title %}Gerenciar Tags{% endblock %}
 
 {% block content %}
+<main class="main-container">
+    <div class="container-form">
+        <div>
+            <h1>Crie uma Nova Tag</h1>
+            <form action="" method="post">
+                Nome: <input type="text" name="nomeForm" required>
+                Cor: <input type="color" name="corForm" list="coresDisp" value="6090c2" required>
+                <datalist id="coresDisp">
+                    <option value="#6090c2">Azul</option>
+                    <option value="#62c47b">Verde</option>
+                    <option value="#fcbd6f">Laranja</option>
+                    <option value="#f9be3c">Amarelo</option>
+                    <option value="#f15490">Rosa</option>
+                    <option value="#cf9cef">Lilás</option>
+                </datalist>
+                Classe: 
+                <select name="classeForm" id="" required>
+                    <option value="" disabled selected>Selecione uma classe</option>
+                    {% for classe in classes %}
+                        <option value="{{ classe.id_classe }}">{{ classe.nome }}</option>
+                        
+                    {% endfor %}
 
-    <div>
-        <h1>Crie uma Nova Tag</h1>
-        <form action="" method="post">
-            Nome: <input type="text" name="nomeForm" required>
-            Cor: <input type="color" name="corForm" list="coresDisp" value="6090c2" required>
-            <datalist id="coresDisp">
-                <option value="#6090c2">Azul</option>
-                <option value="#62c47b">Verde</option>
-                <option value="#fcbd6f">Laranja</option>
-                <option value="#f9be3c">Amarelo</option>
-                <option value="#f15490">Rosa</option>
-                <option value="#cf9cef">Lilás</option>
-            </datalist>
-            Classe: 
-            <select name="classeForm" id="" required>
-                <option value="" disabled selected>Selecione uma classe</option>
-                {% for classe in classes %}
-                    <option value="{{ classe.id_classe }}">{{ classe.nome }}</option>
-                    
-                {% endfor %}
+                </select>
+                <input type="submit" value="Criar">
 
-            </select>
-            <input type="submit" value="Criar">
+            </form>
 
-        </form>
+        </div>
 
     </div>
+
+</main>
     
 {% endblock %}
