--- a/templates/publicar.html
+++ b/templates/publicar.html
@@ -26,8 +26,7 @@
                         
                     {% endfor %}
             </select>
-            <input type="submit" value="Publicar">
-
+            <button type="submit" class="btn btn-warning">Publicar</button> 
         </form>
 
     </div>
