--- a/templates/administrador/classe_tag.html
+++ b/templates/administrador/classe_tag.html
@@ -3,14 +3,20 @@
 {% block title %}Gerenciar Classes{% endblock %}
 
 {% block content %}
-    <div>
-        <h1>Adicionar Classe de Tag</h1>
-        <form action="" method="post">
-            <input type="text" name="nome_classeForm" value="{{form_data if nome_classeForm else ' '}}" required>
-            <input type="submit" value="Adicionar Classe">
+<main class="main-container">
+    <div class="container-form">
+        <div>
+            <h1>Adicionar Classe de Tag</h1>
+            <form action="" method="post">
+                <input type="text" name="nome_classeForm" value="{{form_data if nome_classeForm else ' '}}" required>
+                <input type="submit" value="Adicionar Classe">
 
-        </form>
+            </form>
+
+        </div>
 
     </div>
+
+</main>
     
 {% endblock %}
