--- a/templates/base.html
+++ b/templates/base.html
@@ -23,14 +23,29 @@
             </a>
 
             <div class="nav-links">
-                <a href="{{ url_for('home' ) }}">Página inicial</a>
-                <a href="{{ url_for('publicar')}}">Publicar</a>
+                <a href="{{ url_for('home' ) }}">
+                    <img src="{{ url_for('static', filename='images/icons/icon-inicio.png') }}" alt="">
+                    <span class="nav-text">Início</span>
+                </a>
+                <a href="{{ url_for('publicar')}}">
+                    <img src="{{ url_for('static', filename='images/icons/icon-publi.png') }}" alt="">
+                    <span class="nav-text">Publicar</span>
+                </a>
                 {% if current_user.is_authenticated %}
-                    <a href="{{ url_for('perfil' ) }}">Perfil</a>
-                    <a href="{{ url_for('logout' ) }}">Sair</a>
+                    <a href="{{ url_for('perfil' ) }}">
+                        <img src="{{ url_for('static', filename='images/icons/icon-perfil.png') }}" alt="">
+                        <span class="nav-text">Perfil</span>
+                    </a>
+                    <a href="{{ url_for('logout' ) }}">
+                        <img src="{{ url_for('static', filename='images/icons/icon-sair.png') }}" alt="">
+                        <span class="nav-text">Sair</span>
+                    </a>
 
                 {% else %}
-                    <a href="{{ url_for('login' ) }}">Entrar</a>
+                    <a href="{{ url_for('login' ) }}">
+                        <img src="{{ url_for('static', filename='images/icons/icon-entrar.png') }}" alt="">
+                        <span class="nav-text">Entrar</span>
+                    </a>
 
                 {% endif %}
 
